<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Clientes.DetalhesClienteActivity">

    <ImageView
        android:id="@+id/img_nome"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/person" />
    <TextView
        android:id="@+id/detalhe_cliente_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/img_nome"
        android:layout_toEndOf="@id/img_nome"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="18dp"
        android:text="@string/cliente"
        android:textSize="15sp" />
    <ImageView
        android:id="@+id/img_cpf"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@id/img_nome"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/cpf" />
    <TextView
        android:id="@+id/detalhe_cliente_cpf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detalhe_cliente_nome"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/img_cpf"
        android:layout_toEndOf="@id/img_cpf"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/cpf"
        android:textSize="15sp" />
    <ImageView
        android:id="@+id/img_endereco"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@id/img_cpf"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/house" />
    <TextView
        android:id="@+id/detalhe_cliente_endereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detalhe_cliente_cpf"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/img_endereco"
        android:layout_toRightOf="@id/img_endereco"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/endereco"
        android:textSize="15sp" />
    <ImageView
        android:id="@+id/img_celular"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@id/img_endereco"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/phone" />
    <TextView
        android:id="@+id/detalhe_cliente_celular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detalhe_cliente_endereco"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/img_celular"
        android:layout_toEndOf="@id/img_celular"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/celular"
        android:textSize="15sp" />
    <ImageView
        android:id="@+id/img_email"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@id/img_celular"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/mail" />
    <TextView
        android:id="@+id/detalhe_cliente_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detalhe_cliente_celular"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/img_email"
        android:layout_toEndOf="@id/img_email"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textSize="15sp" />
    <ImageView
        android:id="@+id/img_data"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@id/img_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/calendar_event" />
    <TextView
        android:id="@+id/detalhe_cliente_data_nascimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detalhe_cliente_email"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/img_data"
        android:layout_toEndOf="@id/img_data"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/dataNascimento"
        android:textSize="15sp" />
    <ImageView
        android:id="@+id/img_codigo"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@id/img_data"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/short_list" />
    <TextView
        android:id="@+id/detalhe_cliente_codigo_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detalhe_cliente_data_nascimento"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/img_codigo"
        android:layout_toEndOf="@id/img_codigo"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/codigoCategoria"
        android:textSize="15sp" />
    <ImageView
        android:id="@+id/img_categoria_descricao"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@id/img_codigo"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/simple_list" />
    <TextView
        android:id="@+id/detalhe_cliente_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detalhe_cliente_codigo_categoria"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/img_codigo"
        android:layout_toEndOf="@id/img_codigo"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/categoria"
        android:textSize="15sp" />
</RelativeLayout>